--- a/profileCards/index.html
+++ b/profileCards/index.html
@@ -17,8 +17,8 @@
          <!--profile card -->
          <div class="card">
             <img src="images/img-top1.jpeg" class="image-top">
-            <img src="images/jen02.png" class="profile-image">
-            <h1 class="fullname">Jennifer Chan</h1>
+            <img src="images/img1.jpeg" class="profile-image">
+            <h1 class="fullname">Jan Doe</h1>
             <p class="job">Client Services Director</p>
             <p class="about-me">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, mollitia cumque? A distinctio ab cumque."</p>
             <button  type="button">Explore me</button>
@@ -32,8 +32,8 @@
 
          <div class="card">
             <img src="images/img-top2.jpeg" class="image-top">
-            <img src="images/ramsez.png" class="profile-image">
-            <h1 class="fullname">Ramsez Stamper</h1>
+            <img src="images/img2.jpeg" class="profile-image">
+            <h1 class="fullname">Stive Smith</h1>
             <p class="job">Senior Web Consultant</p>
             <p class="about-me">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, mollitia cumque? A distinctio ab cumque."</p>
             <button  type="button">Explore me</button>
@@ -47,8 +47,8 @@
 
          <div class="card">
             <img src="images/img-top3.jpeg" class="image-top">
-            <img src="images/sean.png" class="profile-image">
-            <h1 class="fullname">Sean Gonsman</h1>
+            <img src="images/img3.jpeg" class="profile-image">
+            <h1 class="fullname">Janiffer Harris</h1>
             <p class="job">Senior Web Consultant</p>
             <p class="about-me">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, mollitia cumque? A distinctio ab cumque."</p>
             <button  type="button">Explore me</button>
