--- a/image-linear-divider/index.html
+++ b/image-linear-divider/index.html
@@ -7,6 +7,25 @@
     <title>Image & linear divider</title>
 </head>
 <body>
-    
+    <h2>Border Image & Linear Gradient Devider</h2>
+    <section class="sec-1">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Itaque cum, aperiam nesciunt aliquid pariatur necessitatibus.
+    </section>
+
+    <section class="sec-2">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Itaque cum, aperiam nesciunt aliquid pariatur necessitatibus.
+    </section>
+
+    <section class="sec-3">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Itaque cum, aperiam nesciunt aliquid pariatur necessitatibus.
+    </section>
+
+    <section class="sec-4">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Itaque cum, aperiam nesciunt aliquid pariatur necessitatibus.
+    </section>
 </body>
 </html>
