--- a/Cosmo-Junkie/index.html
+++ b/Cosmo-Junkie/index.html
@@ -64,8 +64,8 @@
         <h4>Flutter</h4>
       </li>
     </ul>
-    <p class="leading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla lacus diam. Mauris
-      fringilla consectetur nibh, sit amet tempus augue.</p>
+    <!-- <p class="leading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla lacus diam. Mauris
+      fringilla consectetur nibh, sit amet tempus augue.</p> -->
   </section>
   <section id="contact">
     <h3>Get In Touch</h3>
